# Quaternion_based_UKF

./: CMakeLists.txt  README.md  plot_graph.py
data/imu/: imuRaw1_ts.txt  imuRaw1_vals.txt  imuRaw2_ts.txt  imuRaw2_vals.txt  imuRaw3_ts.txt  imuRaw3_vals.txt
data/vicon/: viconRaw1_rots.txt  viconRaw1_ts.txt  viconRaw2_rots.txt  viconRaw2_ts.txt  viconRaw3_rots.txt  viconRaw3_ts.txt
include/: data_handler.h  data_parser.h  ukf.h
src/: data_handler.cpp  data_parser.cpp  estimate_rot.cpp  filter  filter.cpp  pitch_predictions.txt  plot_graph.py  predictions.txt  roll_predictions.txt  test.cpp  trial.cpp  ukf.cpp  yaw_predictions.txt
